Fixed nav spacing

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -160,7 +160,7 @@ li {
 @media only screen and (max-width: 511px) {
 
   .nav ul {
-    padding-top: 0.8em;
+    padding-top: 1.4em;
   }
 
   .nav li {
